# pritam65-create

project/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
project/electron/: main.js  preload.js
project/mobile/: App.tsx  package.json
project/mobile/src/components/: ChatInterface.tsx  Header.tsx
project/src/: App.tsx
project/src-tauri/: Cargo.toml  tauri.conf.json
project/src-tauri/src/: main.rs
project/src/components/: AnimationSelector.tsx  ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  CodeBlock.tsx  DynamicBackground.tsx  FileUpload.tsx  Header.tsx  LoginScreen.tsx  ParticleBackground.tsx  TypingIndicator.tsx  WelcomeScreen.tsx  WindowControls.tsx
project/src/context/: AuthContext.tsx  ChatContext.tsx  ChatHistoryContext.tsx  SettingsContext.tsx
project/src/types/: index.ts
project/src/utils/: aiService.ts
